Source code synced with Neon game development kit 6.3.4

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -604,7 +604,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -903,12 +902,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return the handle to sprite sheet.<br>
       <br>
       <span style="font-style: italic;">void Sheet::clone(Sheet *target);</span>
-      – Create copy of the sprite sheet if the image storage of target sprite sheet is
-      not empty.<br>
+      – Create copy of the sprite sheet if the image storage of target sprite
+      sheet is not empty.<br>
       <br>
       <span style="font-style: italic;">void Sheet::clone(Sheet &amp;target);</span>
-      – Create copy of the sprite sheet if the image storage of target sheet sprite is
-      not empty.<br>
+      – Create copy of the sprite sheet if the image storage of target sheet
+      sprite is not empty.<br>
       <br>
       <span style="text-decoration: underline;"> Sprite sheet texture</span><br>
       <br>
@@ -1203,6 +1202,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="font-style: italic;"> void Audio::play_loop();</span> –
       Checking play status and restart play if needed.<br>
+      <br>
+      <span style="font-style: italic;">void Audio::play(const bool loop);</span>
+      – Play a sound. You can set loop flag as true for loop playing mode.<br>
       <br>
       <span style="font-style: italic;"> void Audio::stop();</span> – Stop
       playing a content of the target file.<br>
@@ -1967,8 +1969,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big> </big>
     <h2><a name="mozTocId472209" class="mozTocH2"></a><big>Chapter 4. Game–pad</big></h2>
     <big> Game–pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
-Multimedia
-        API</a>. </big>
+Multimedia API</a>. </big>
     <h2><a name="mozTocId804583" class="mozTocH2"></a><big>Chapter 5. Input</big></h2>
     <big> <span style="text-decoration: underline;"> Input back–end</span><br>
       <br>
@@ -2336,6 +2337,7 @@ Multimedia
       6.9.2 – Small changes.<br>
       6.9.3 – Source code synced with Neon game development kit 6.2.6.<br>
       6.9.4 – Sprite sheet subsystem improved.<br>
+      6.9.5 – Source code synced with Neon game development kit 6.3.4.<br>
     </big>
     <p></p>
   </body>
