Source code synced with Gray game development kit 2.5.7

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -217,14 +217,6 @@
           <td><big>Windows XP or higher </big></td>
         </tr>
         <tr>
-          <td><big>Additional software </big></td>
-          <td><big>DirectX 8.1 or higher </big></td>
-        </tr>
-        <tr>
-          <td><big>System type </big></td>
-          <td><big>32 or 64 bits </big></td>
-        </tr>
-        <tr>
           <td><big>Minimum color depth </big></td>
           <td><big>16 bits </big></td>
         </tr>
@@ -256,7 +248,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <li><a href="http://openwatcom.org"><big>Open Watcom</big></a></li>
       <li><big><a href="https://open-watcom.github.io">Open Watcom V2 Fork</a><br>
         </big></li>
-      <li><big>Visual C++ 2005</big></li>
+      <li><big>Visual C++ 2003</big></li>
+      <li><big>Visual C++ 2005<br>
+        </big></li>
       <li><big>Visual C++ 2008<br>
         </big></li>
       <li><big>Visual C++ 2010</big></li>
@@ -286,8 +280,16 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         specific notes</big></h2>
     <big><span style="text-decoration: underline;"> Old processor support</span><br>
       <br>
-      Open Watcom or Open Watcom V2 Fork need for old processors support.<br>
-      <br style="text-decoration: underline;">
+      need one of follow compilers need for old processors support:<br>
+      <br>
+    </big>
+    <ul>
+      <li><big>Open Watcom</big></li>
+      <li><big>Open Watcom V2 Fork</big></li>
+      <li><big>Visual C++ 2003</big></li>
+      <li><big>Visual C++ 2005</big></li>
+    </ul>
+    <big> <br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Windows XP support</span><br>
       <br>
       You need one of follow compilers for Windows XP support:<br>
@@ -296,7 +298,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <li><big>TDM–GCC</big></li>
       <li><big>Open Watcom</big></li>
       <li><big>Open Watcom V2 Fork</big></li>
-      <li><big>Visual C++ 2005</big></li>
+      <li><big>Visual C++ 2003</big></li>
+      <li><big>Visual C++ 2005<br>
+        </big></li>
       <li><big>Visual C++ 2008<br>
         </big></li>
     </ul>
@@ -304,8 +308,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;">Windows SDK and DirectX SDK</span><br>
       <br>
       You need <a href="https://www.microsoft.com/en-us/download/details.aspx?id=15656">Windows
-        Server 2003 SP1 Platform SDK</a> and DirectX SDK February 2005 if you
-      using Visual C++ 2005.<br>
+        Server 2003 SP1 Platform SDK</a> and <a href="https://archive.org/details/dxsdk_feb2005">DirectX
+        SDK February 2005</a> if you using Visual C++ 2005 Express.<br>
       <br>
       <span style="text-decoration: underline;"> Compiler optimization</span><br>
       <br>
@@ -604,6 +608,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
+
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -2338,6 +2343,7 @@ Multimedia API</a>. </big>
       6.9.3 – Source code synced with Neon game development kit 6.2.6.<br>
       6.9.4 – Sprite sheet subsystem improved.<br>
       6.9.5 – Source code synced with Neon game development kit 6.3.4.<br>
+      6.9.6 – Source code synced with Gray game development kit 2.5.7.<br>
     </big>
     <p></p>
   </body>
