--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -386,6 +386,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -608,7 +609,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -1122,6 +1122,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       &nbsp; <span style="font-style: italic;"> unsigned int y;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int width;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int height;</span><br
+
         style="font-style: italic;">
       <span style="font-style: italic;"> } BOX;</span><br>
       <br>
@@ -1242,10 +1243,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -1812,14 +1815,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </tbody>
     </table>
     <big><br>
-      <span style="text-decoration: underline;">Important remark</span><br>
-      <br>
-      Any stick has two axes.<br>
-      Highest position of vertical axis is up. Lowest position of vertical axis
-      is down.<br>
-      Highest position of horizontal axis is right. Lowest position of
-      horizontal axis is left.<br>
-      <br>
       <span style="text-decoration: underline;"> Working with game–pad</span><br>
       <br>
       Just use <span style="font-style: italic;">Gamepad</span> class to work
@@ -2344,6 +2339,7 @@ Multimedia API</a>. </big>
       6.9.4 – Sprite sheet subsystem improved.<br>
       6.9.5 – Source code synced with Neon game development kit 6.3.4.<br>
       6.9.6 – Source code synced with Gray game development kit 2.5.7.<br>
+      6.9.7 – Game–pad support improved.<br>
     </big>
     <p></p>
   </body>
