--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2340,6 +2340,7 @@ Multimedia API</a>. </big>
       6.9.5 – Source code synced with Neon game development kit 6.3.4.<br>
       6.9.6 – Source code synced with Gray game development kit 2.5.7.<br>
       6.9.7 – Game–pad support improved.<br>
+      6.9.8 – Source code synced with Gray game development kit 2.6.<br>
     </big>
     <p></p>
   </body>
