Source code synced with Neon game development kit 6.3.6

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -340,8 +340,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <li><big>kernel32.lib</big></li>
       <li><big>gdi32.lib</big></li>
       <li><big>opengl32.lib</big></li>
-      <li><big>glu32.lib<br>
-        </big></li>
       <li><big>ole32.lib</big></li>
       <li><big>strmiids.lib</big></li>
       <li><big>winmm.lib</big></li>
@@ -2311,7 +2309,8 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
+      5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2341,7 +2340,7 @@ Multimedia API</a>. </big>
       6.9.7 – Game–pad support improved.<br>
       6.9.8 – Source code synced with Gray game development kit 2.6.<br>
       6.9.9 – Image resizer improved.<br>
-    </big>
+    </big><big> 7.0 – Source code synced with Neon game development kit 6.3.6.</big><br>
     <p></p>
   </body>
 </html>
