Image resizer improved

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2340,7 +2340,8 @@ Multimedia API</a>. </big>
       6.9.7 – Game–pad support improved.<br>
       6.9.8 – Source code synced with Gray game development kit 2.6.<br>
       6.9.9 – Image resizer improved.<br>
-    </big><big> 7.0 – Source code synced with Neon game development kit 6.3.6.</big><br>
+      7.0 – Source code synced with Neon game development kit 6.3.6.<br>
+      7.0.1 – Image resizer improved.<br>
     <p></p>
   </body>
 </html>
