--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2342,6 +2342,7 @@ Multimedia API</a>. </big>
       6.9.9 – Image resizer improved.<br>
       7.0 – Source code synced with Neon game development kit 6.3.6.<br>
       7.0.1 – Image resizer improved.<br>
+      7.0.2 – Small changes.<br>
     <p></p>
   </body>
 </html>
