--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -1824,7 +1824,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       game–pad buttons.<br>
       <br>
       <span style="font-style: italic;">unsigned int
-        Gamepad::get_stick_amount();</span> – Return amount of the game–pad
+        Gamepad::get_stick_amount() const;</span> – Return amount of the game–pad
       sticks.<br>
       <span style="font-style: italic;"></span><br>
       <span style="font-style: italic;"> void Gamepad::update();</span> – Update
@@ -1850,25 +1850,25 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       button was release.<br>
       <span style="font-style: italic;"></span><br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
+        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
       Return x–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
+        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
       Return y–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_x();</span> – Return x–direction of left stick.<br>
+        Gamepad::get_left_stick_x() const;</span> – Return x–direction of left stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_y();</span> – Return y–direction of left stick.<br>
+        Gamepad::get_left_stick_y() const;</span> – Return y–direction of left stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_right_stick_x();</span> – Return x–direction of right
+        Gamepad::get_right_stick_x() const;</span> – Return x–direction of right
       stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_right_stick_y();</span> – Return y–direction of right
+        Gamepad::get_right_stick_y() const;</span> – Return y–direction of right
       stick.<br>
     </big>
     <h1><a name="mozTocId309127" class="mozTocH1"></a><big>Part 9. Internal
@@ -2339,6 +2339,7 @@ Multimedia API</a>. </big>
       7.0.4 – 7.0.6 – Game–pad support improved.<br>
       7.0.7 – Small changes.<br>
       7.0.8 – 7.1.6 – Game–pad support improved.<br>
+      7.1.7 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
