--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2340,6 +2340,7 @@ Multimedia API</a>. </big>
       7.0.7 – Small changes.<br>
       7.0.8 – 7.1.6 – Game–pad support improved.<br>
       7.1.7 – Small changes.<br>
+      7.1.8 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
