--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2342,6 +2342,7 @@ Multimedia API</a>. </big>
       7.1.7 – Small changes.<br>
       7.1.8 – 7.2 – Image resizer improved.<br>
       7.2.1 – 7.2.2 – Small changes.<br>
+      7.2.3 – 7.2.4 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
