--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2345,6 +2345,7 @@ Multimedia API</a>. </big>
       7.2.3 – 7.2.4 – Image resizer improved.<br>
       7.2.5 – Small changes.<br>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
+      7.3 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
