--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2346,6 +2346,7 @@ Multimedia API</a>. </big>
       7.2.5 – Small changes.<br>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
+      7.3.2 – Small render bug fixed.<br>
     </big>
     <p></p>
     <big> </big>
