--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2347,6 +2347,7 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
     </big>
     <p></p>
     <big> </big>
