Background subsystem improved

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -608,11 +608,15 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
+
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
       <span style="font-style: italic;"> void Background::draw();</span> – Draw
       a background.<br>
+      <br>
+      <span style="font-style: italic;">void Background::draw(const unsigned int
+        target);</span> – Draw target frame in scrollable background.<br>
       <br>
       <span style="font-style: italic;"> void Background::destroy_image();</span>
       – Destroy a background image.<br>
@@ -858,6 +862,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       public methods.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
@@ -1823,9 +1828,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         Gamepad::get_button_amount() const;</span> – Return amount of the
       game–pad buttons.<br>
       <br>
-      <span style="font-style: italic;">unsigned int
-        Gamepad::get_stick_amount() const;</span> – Return amount of the game–pad
-      sticks.<br>
+      <span style="font-style: italic;">unsigned int Gamepad::get_stick_amount()
+        const;</span> – Return amount of the game–pad sticks.<br>
       <span style="font-style: italic;"></span><br>
       <span style="font-style: italic;"> void Gamepad::update();</span> – Update
       internal game–pad state. Always call it before call another methods.<br>
@@ -1850,18 +1854,20 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       button was release.<br>
       <span style="font-style: italic;"></span><br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
-      Return x–direction of specific stick.<br>
+        Gamepad::get_stick_x(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span>
+      – Return x–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span> –
-      Return y–direction of specific stick.<br>
+        Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick) const;</span>
+      – Return y–direction of specific stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_x() const;</span> – Return x–direction of left stick.<br>
+        Gamepad::get_left_stick_x() const;</span> – Return x–direction of left
+      stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
-        Gamepad::get_left_stick_y() const;</span> – Return y–direction of left stick.<br>
+        Gamepad::get_left_stick_y() const;</span> – Return y–direction of left
+      stick.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::GAMEPAD_DIRECTION
         Gamepad::get_right_stick_x() const;</span> – Return x–direction of right
@@ -2348,6 +2354,7 @@ Multimedia API</a>. </big>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
       7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
+      7.3.4 – Background subsystem improved.<br>
     </big>
     <p></p>
     <big> </big>
