--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2355,6 +2355,7 @@ Multimedia API</a>. </big>
       7.3.2 – Small render bug fixed.<br>
       7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
+      7.3.5 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
