Source code synced with Simple windows framework 7.3.5

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -318,6 +318,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -608,7 +609,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Load background </big><big>from target file</big><big>.<br>
       <br>
       <span style="font-style: italic;">void Background::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load normal background from target file.<br>
       <br>
@@ -648,7 +648,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;"> Important notice</span><br>
       <br>
       Always call <span style="font-style: italic;">prepare</span> method after
-      set background setting or load background.<br>
+      load background.<br>
     </big>
     <h2><a name="mozTocId309905" class="mozTocH2"></a><big>Chapter 7. Base
         sprite subsystem</big></h2>
@@ -862,7 +862,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       public methods.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
-
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
@@ -2356,6 +2355,7 @@ Multimedia API</a>. </big>
       7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
+      7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
     </big>
     <p></p>
     <big> </big>
