Image resizer improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1909,7 +1909,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Core classes</span><br>
       <br>
-      All engine core classes and functions declared in <span style="font-style: italic;">Core</span>
+      All engine core classes declared in <span style="font-style: italic;">Core</span>
       sub–namespace.<br>
       <br>
     </big> <big><span style="font-style: italic;"> FPS</span> implement fps
@@ -2356,6 +2356,7 @@ Multimedia API</a>. </big>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
+      7.3.7 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
